# PublicFlashLoansSC

./: README.md
FlashLoansSC/: .gitignore  Cargo.toml  mxsc-template.toml
FlashLoansSC/meta/: Cargo.toml
FlashLoansSC/meta/src/: main.rs
FlashLoansSC/scenarios/: fastloan.scen.json
FlashLoansSC/src/: actions.rs  deposit.rs  fees.rs  lib.rs  proxy.rs  repay.rs  setup.rs  storage.rs  types.rs
FlashLoansSC/tests/: fastloan_scenario_rs_test.rs
FlashLoansSC/tests/fastloan_setup/: mod.rs
FlashLoansSC/wasm/: Cargo.toml
FlashLoansSC/wasm/src/: lib.rs
xExchange/fees-collector/: Cargo.toml
xExchange/fees-collector/wasm/src/: lib.rs
xExchange/pair/: Cargo.toml
xExchange/pair/src/: config.rs  errors.rs  flashloan.rs  lib.rs  liquidity_pool.rs
xExchange/pair/src/contexts/: borrow_liquidity.rs  mod.rs
xExchange/pair/wasm-pair-full/src/: lib.rs
xExchange/pair/wasm-safe-price-view/src/: lib.rs
xExchange/pair/wasm/src/: lib.rs
