[package]
name = "pair"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.common_errors]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2fd2e4c"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2fd2e4c"

[dependencies.token_send]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2fd2e4c"

[dependencies.permissions_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2fd2e4c"

[dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2fd2e4c"

[dependencies.simple-lock]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2fd2e4c"

[dependencies.fees-collector]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2fd2e4c"

[dependencies.itertools]
version = "0.10.1"
default-features = false

[dependencies.multiversx-sc]
version = "=0.43.3"
features = ["esdt-token-payment-legacy-decode"]


[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.43.3"
